Adicionando meta tag OG

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <!--META TAG OG -->
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Dev Burguer - O melhor Hamburguer Dev!"/>
+  <meta property="og:image" content="https://cardapio-js.vercel.app/assets/hamb-1.png"/>
+  <meta property="og:description" content="O melhor Hamburguer Artesanal de Brasíla"/>
+  <meta property="og:site_name" content="DevBurguer"/>
 
   <title>Dev Burguer</title>
 </head>
